Bug #27792 query cache returns wrong result, with certain system variables  - Queries in the query cache are identified by the individual    characters in the query statement, the current database and    the current environment expressed as a set of system variable    flags.  - Since the set of environment flags didn't properly describe the    current environment unexpected results were returned from the    query cache.  - Query cache is now cleared when the variable ft_boolean_syntax is    updated.  - An identification flag for the variable default_week_format is    added to the query cache record.

Thanks to Martin Friebe who has supplied significant parts of this patch.